update head img

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 244
 SEOTitle: 刘加英 | 244 Blog
-header-img: https://ohuuyffq2.qnssl.com/bg_homepage.jpg
+header-img: https://ohuuyffq2.qnssl.com/jonathan.jpg
 email: beingswu@gmail.com
 description: "关于产品、前端和摄影 | 伍双，产品经理，熟悉音视频以及直播领域相关知识 | 这里是伍双的个人博客，一起改善孤独，创造善意的产品。"
 keyword: "伍双, beings, 产品经理, 七牛, 七牛直播云, pili, Beings Blog, 博客, 个人网站, 互联网, 前端, 设计, 产品,React,React Native, 全栈，摄影爱好者"
