--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 # weibo_username:     伍双
-zhihu_username:     wushuang-beings
-github_username:    alwaysmavs
+#zhihu_username:     wushuang-beings
+#github_username:    alwaysmavs
 #twitter_username:  huxpro
-facebook_username:  mangascript
+#facebook_username:  mangascript
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -70,7 +70,7 @@ ba_track_id: 86b26e1ada60e26f19067e1f031503a3
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "学习与分享"
-sidebar-avatar: https://ohuuyffq2.qnssl.com/head.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: https://ohuuyffq2.qnssl.com/244.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
